--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2015",
     "module": "commonjs",
     "rootDir": "./src",
-    "outDir": "./src",
+    "outDir": "./lib",
     "declaration": true,
     "removeComments": true,
     "strict": true,
